--- a/servidor/views/intVend/indVend.ejs
+++ b/servidor/views/intVend/indVend.ejs
@@ -13,6 +13,8 @@
         <li class="list-group-item m-1"><a href="/vendedor/pedEntregados">Pedidos Listos</a></li>
         <li class="list-group-item m-1"><a href="/vendedor/pedNoEntregados">Pedidos por entregar</a></li>
         <li class="list-group-item m-1"><a href="/vendedor/pedNuevo">Nuevo Pedido</a></li>
+        <li class="list-group-item m-1"><a href="/funciones/crearCliente">Nuevo Cliente</a></li>
+        <li class="list-group-item m-1"><a href="/vendedor/listaCliente">Lista Cliente</a></li>
     </ul>
     <div><a href="/logout" class="list-group-item list-group-item-action active w-50 ml-3">salir del sistema</a></div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
