--- a/servidor/views/otrasRutas/colleciones/clientes/crearCliente.ejs
+++ b/servidor/views/otrasRutas/colleciones/clientes/crearCliente.ejs
@@ -10,7 +10,7 @@
     <div>
         <div>
             <h1>Crear clientes</h1>
-            <h3 aligne="right"><a href="/funciones/menuColeccion">volver</a></h3>
+            <h3 aligne="right"><a href="<%=redic%>">volver</a></h3>
         </div>
     </div>
     <div>
@@ -19,19 +19,19 @@
             <form action="/api/clientes" name="formularia" method="post" aligne="center">
                 <div class="form-group ml-2">
                     <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="nombre cliente" class="form-control w-50"> 
+                    <input type="text" name="nombre" id="nombre" placeholder="nombre cliente" class="form-control w-50" > 
                 </div>
                 <div class="form-group ml-2">
                     <label for="comuna">Comuna</label>
-                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50">
+                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="calle">Calle</label>
-                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50">
+                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="nCasa">N° Casa</label>
-                    <input type="number" name="nCasa" id="nCasa" placeholder="nCasa" class="form-control w-50">
+                    <input type="number" name="nCasa" id="nCasa" placeholder="nCasa" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="fechaNac">Fecha nac</label>
@@ -60,7 +60,9 @@
                         <option value="empresa">empresa</option>
                 </select>
                 </div>
-                <label><button class="btn btn-primary">enviar</button></label>
+                <div class="form-group ml-2">
+                    <button class="btn btn-primary">enviar</button>
+                </div>
             </form>
         
         </div>
