--- a/servidor/views/otrasRutas/colleciones/insumo/insumo.ejs
+++ b/servidor/views/otrasRutas/colleciones/insumo/insumo.ejs
@@ -18,17 +18,17 @@
             <form action="/api/insumos" name="formularia" method="post">
                 <div class="form-group ml-2">
                     <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="nombre" class="form-control w-50">
+                    <input type="text" name="nombre" id="nombre" placeholder="nombre" class="form-control0" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="cantidad">Cantidad</label>
-                    <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control w-50">
+                    <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control0" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="precio">Precio</label>
-                    <input type="number" name="precio" id="precio" placeholder="precio" class="form-control w-50" >
+                    <input type="number" name="precio" id="precio" placeholder="precio" class="form-control0" required>
                 </div>
-                <label><button class="btn btn-primary ml-2">enviar</button></label>
+                <button class="btn btn-primary ml-2">enviar</button>
             </form>
         </div>
     </div>
