--- a/servidor/views/otrasRutas/inventario/compra.ejs
+++ b/servidor/views/otrasRutas/inventario/compra.ejs
@@ -26,7 +26,7 @@
                     <tr>
                         <td><%=producto[i].nombre%></td>
                         <td><%=producto[i].cantidadProd%></td>
-                        <td><input type="number" name="cant" value="0" class="form-control m-1"></td>
+                        <td><input type="number" name="cant" value="0" class="form-control m-1" required></td>
                     </tr>
                     <%} %>
                 </tbody>
