--- a/servidor/views/intVend/nuevoPed.ejs
+++ b/servidor/views/intVend/nuevoPed.ejs
@@ -22,27 +22,46 @@
                     <option value="<%=vendedor%>"> <%=vendedor%></option>
                 </select>
             </div>
-            <div class="form-group ml-2">
-                <label for="cliente">Cliente</label>
-                <input list="clienteLis" name="cliente" id="cliente" autocomplete="off" class="form-control w-50">
-                <datalist id="clienteLis">
-                    <% for(i=0;i < cliente.length;i++){%>
-                    <option value="<%=cliente[i].nombre%>"></option>
-                    <%} %>
-                </datalist>
-            </div>
-            <div class="form-group ml-2">
-                <label for="comuna">Comuna</label>
-                <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50">
-            </div>
-            <div class="form-group ml-2">
-                <label for="calle">Calle</label>
-                <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50">
-            </div>
-            <div class="form-group ml-2">
-                <label for="nCasa">N° Casa</label>
-                <input type="text" name="nCasa" id="nCasa" placeholder="N° casa" class="form-control w-50">
-            </div>
+            <% if(bool) {%>
+                <div class="form-group ml-2">
+                    <label for="cliente">Cliente</label>
+                    <input list="clienteLis" name="cliente" id="cliente" autocomplete="off" class="form-control w-50">
+                    <datalist id="clienteLis">
+                        <% for(i=0;i < cliente.length;i++){%>
+                        <option value="<%=cliente[i].nombre%>"></option>
+                        <%} %>
+                    </datalist>
+                </div>
+                <div class="form-group ml-2">
+                    <label for="comuna">Comuna</label>
+                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="calle">Calle</label>
+                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="nCasa">N° Casa</label>
+                    <input type="text" name="nCasa" id="nCasa" placeholder="N° casa" class="form-control w-50">
+                </div>
+            <%}else{%>
+                <div class="form-group ml-2">
+                    <label for="cliente">Cliente</label>
+                    <input type="text" name="cliente" id="cliente" autocomplete="off" class="form-control w-50" value="<%=cliente[0].nombre%>">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="comuna">Comuna</label>
+                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50" value="<%=cliente[0].comuna%>">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="calle">Calle</label>    
+                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50" value="<%=cliente[0].calle%>">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="nCasa">N° Casa</label>
+                    <input type="text" name="nCasa" id="nCasa" placeholder="N° casa" class="form-control w-50" value="<%=cliente[0].nCasa%>" >
+                </div>
+                <%}%>
             <div class="form-group ml-2">
                 <label for="estado">Estado</label>
                 <select name="estado" id="estado" class="form-control w-50">
@@ -60,7 +79,7 @@
             </div>
             <div class="form-group ml-2">
                 <label for="fecha">Fecha</label>
-                <input type="date" name="fecha" id="fecha" class="form-control w-50">
+                <input type="date" name="fecha" id="fecha" class="form-control w-50" required>
             </div>
             <div class="form-group ml-2">         
                 <button class="btn btn-primary">enviar</button></label>
@@ -73,11 +92,14 @@
                         <% for(i=0;i < producto.length;i++){%>
                             <option value="<%=producto[i].nombre%>"> <%=producto[i].nombre%></option>
                             <%} %>
+                        <% for(i=0;i < pack.length;i++){%>
+                            <option value="<%=pack[i].nombre%>"> <%=pack[i].nombre%></option>
+                            <%} %>
                     </select>
                 </div>
                 <div class="form-group ml-2">
                     <label for="cantidad">Cantidad</label>
-                    <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control w-50">
+                    <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label><input type="button" id="btn-ped" value="más producto" class="btn btn-primary"></label>
