--- a/servidor/views/otrasRutas/colleciones/pack/nuevoPack.ejs
+++ b/servidor/views/otrasRutas/colleciones/pack/nuevoPack.ejs
@@ -18,11 +18,11 @@
             <form action="/api/pack" name="formularia" method="post">
                 <div class="form-group ml-2">
                     <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="nombre pack" class="form-control w-50">
+                    <input type="text" name="nombre" id="nombre" placeholder="nombre pack" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="precio">Precio</label>
-                    <input type="number" name="precio" id="precio" placeholder="precio" class="form-control w-50">
+                    <input type="number" name="precio" id="precio" placeholder="precio" class="form-control w-50" required>
                 </div>
                 <label><button class="btn btn-primary">enviar</button>
                 <hr>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="form-group ml-2">
                         <label for="cantidad">Cantidad</label>
-                        <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control w-50">
+                        <input type="number" name="cantidad" id="cantidad" placeholder="cantidad" class="form-control w-50" required>
                     </div>
                     <label><input type="button" id="btn-ped" value="más producto"></label>
                 </div>
