--- a/servidor/views/otrasRutas/colleciones/producto/producto.ejs
+++ b/servidor/views/otrasRutas/colleciones/producto/producto.ejs
@@ -17,7 +17,7 @@
             <form action="/api/productos" name="formularia" id="formularia" method="post">
             <div class="form-group ml-2">
                 <label for="nombre">Nombre Prod</label>
-                <input type="text" name="nombre" id="nombre" placeholder="nombre producto" class="form-control w-50">
+                <input type="text" name="nombre" id="nombre" placeholder="nombre producto" class="form-control w-50" required>
             </div>
             <div class="form-group ml-2">
                 <label for="tipo">Producido</label>
@@ -28,15 +28,15 @@
             </div>
             <div class="form-group ml-2">
                 <label for="cantidadProd">Cantidad</label>
-                <input type="number" name="cantidadProd" id="cantidadProd" placeholder="cantidad producto" class="form-control w-50">
+                <input type="number" name="cantidadProd" id="cantidadProd" placeholder="cantidad producto" class="form-control w-50" required>
             </div>
             <div class="form-group ml-2">
                 <label for="precio">Precio</label>
-                <input type="number" name="precio" id="precio" placeholder="precio" class="form-control w-50">
+                <input type="number" name="precio" id="precio" placeholder="precio" class="form-control w-50" required>
             </div>
             <div class="form-group ml-2">
                 <label for="comis">precio envio</label>
-                <input type="number" name="comis" id="comis" placeholder="precio por envío" class="form-control w-50">
+                <input type="number" name="comis" id="comis" placeholder="precio por envío" class="form-control w-50" required>
             </div>
             <div class="form-group ml-2">
                 <label for="retornable">Retorna algo</label>
