--- a/servidor/views/otrasRutas/colleciones/vendedor/modifVendedor.ejs
+++ b/servidor/views/otrasRutas/colleciones/vendedor/modifVendedor.ejs
@@ -15,14 +15,36 @@
     <div>
         <div>
             <form action="/api/vendedores/put/<%=vendedor._id%>" name="formularia" method="post">
-                <label><input type="text" name="nombre" id="nombre" value="<%=vendedor.nombre%>"></label>
-                <label><input type="text" name="user" id="user" value="<%=vendedor.user%>"></label>
-                <label><input type="text" name="comuna" id="comuna" value="<%=vendedor.comuna%>"></label>
-                <label><input type="text" name="calle" id="calle" value="<%=vendedor.calle%>"></label>
-                <label><input type="number" name="nCasa" id="nCasa" value="<%=vendedor.nCasa%>"></label>
-                <label><input type="number" name="telefono" id="telefono" value="<%=vendedor.telefono%>" ></label>
-                <label><input type="number" name="rut" id="rut" value="<%=vendedor.rut%>"></label>
-                <label><button class="btn btn-primary">enviar</button></label>
+                <div class="form-group ml-2">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" name="nombre" id="nombre" value="<%=vendedor.nombre%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="user">Usuario</label>
+                    <input type="text" name="user" id="user" value="<%=vendedor.user%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="comuna">Comuna</label>
+                    <input type="text" name="comuna" id="comuna" value="<%=vendedor.comuna%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="calle">Calle</label>
+                    <input type="text" name="calle" id="calle" value="<%=vendedor.calle%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="nCasa">N° Casa</label>
+                    <input type="number" name="nCasa" id="nCasa" value="<%=vendedor.nCasa%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="telefono">N° telefono</label>
+                    <input type="number" name="telefono" id="telefono" value="<%=vendedor.telefono%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                    <label for="rut">RUT</label>
+                    <input type="number" name="rut" id="rut" value="<%=vendedor.rut%>" class="form-control w-50">
+                </div>
+                <div class="form-group ml-2">
+                <button class="btn btn-primary">enviar</button>
             </form>
         </div>
     </div>
