--- a/servidor/views/otrasRutas/colleciones/vendedor/vendedor.ejs
+++ b/servidor/views/otrasRutas/colleciones/vendedor/vendedor.ejs
@@ -19,34 +19,34 @@
             <form action="/api/vendedores" name="formularia" method="post">
                 <div class="form-group ml-2">
                     <label for="nombre">Nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="nombre vendedor" class="form-control w-50">
+                    <input type="text" name="nombre" id="nombre" placeholder="nombre vendedor" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="user">Usuario</label>
-                    <input type="text" name="user" id="user" placeholder="nombre usuario" class="form-control w-50">
+                    <input type="text" name="user" id="user" placeholder="nombre usuario" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="comuna">Comuna</label>
-                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50">
+                    <input type="text" name="comuna" id="comuna" placeholder="comuna" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="calle">Calle</label>
-                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50">
+                    <input type="text" name="calle" id="calle" placeholder="calle" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="nCasa">N° Casa</label>
-                    <input type="number" name="nCasa" id="nCasa" placeholder="nCasa" class="form-control w-50">
+                    <input type="number" name="nCasa" id="nCasa" placeholder="nCasa" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="telefono">N° telefono</label>
-                    <input type="number" name="telefono" id="telefono" placeholder="telefono" class="form-control w-50">
+                    <input type="number" name="telefono" id="telefono" placeholder="telefono" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
                     <label for="rut">RUT</label>
-                    <input type="number" name="rut" id="rut" placeholder="rut" class="form-control w-50">
+                    <input type="number" name="rut" id="rut" placeholder="rut" class="form-control w-50" required>
                 </div>
                 <div class="form-group ml-2">
-                <label></label><button class="btn btn-primary">enviar</button>
+                <button class="btn btn-primary">enviar</button>
             </form>
         
         </div>
