--- a/servidor/views/otrasRutas/inventario/produccion.ejs
+++ b/servidor/views/otrasRutas/inventario/produccion.ejs
@@ -22,7 +22,7 @@
                     <% for (i=0; i < producto.length;i++){%>
                     <tr>
                         <td><%=producto[i].nombre%></td>
-                        <td><input type="number" name="cant" id="cant" value="0" class="form-control m-1"></td>
+                        <td><input type="number" name="cant" id="cant" value="0" class="form-control m-1" required></td>
                     </tr>
                     <%} %>
                 </tbody>
