--- a/servidor/views/intVend/listaPedido.ejs
+++ b/servidor/views/intVend/listaPedido.ejs
@@ -11,6 +11,13 @@
         <h1><%=title%></h1>
         <h3 aligne="right"><a href="/vendedor/index">volver</a></h3>
     </div>
+    <div>
+        <!--<form action="/vendedor/listaPedido" method="POST">
+            <label>fecha inicio <input type="date" name="fechaIn" ></label>
+            <label>fecha termino<input type="date" name="fechaTer"></label>
+            <label> <button>enviar</button> </label>
+        </form>-->
+    </div><br>
     <div class="listado">
         <div id="tablacon">
             <center>
